Remove legacy temperature response fields
